--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -33,7 +33,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:gravity="center|start"
-        android:text="Moamen Abdulrahman"
+        android:text="Guest"
         android:textColor="@color/mycolor"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:gravity="center|start"
-        android:text="Moamen@gmail.com"
+        android:text="guest@exampel.com"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/userNameDrawer"
