--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                         <com.google.android.material.bottomnavigation.BottomNavigationView
                             android:id="@+id/bottom_navigation"
                             android:layout_width="match_parent"
-                            android:layout_height="90dp"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
                             android:background="@color/white_v2"
                             app:labelVisibilityMode="selected"
