--- a/app/src/main/res/layout/shimmer_placeholder_main_view_meal_layout.xml
+++ b/app/src/main/res/layout/shimmer_placeholder_main_view_meal_layout.xml
@@ -2,25 +2,28 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="16dp"
+    android:layout_marginTop="8dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="220dp"
-        android:layout_height="130dp"
+        android:layout_height="225dp"
         app:cardBackgroundColor="@android:color/darker_gray"
         app:cardCornerRadius="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@color/colorGray"
         app:strokeWidth="2dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="15dp"
         android:layout_marginEnd="5dp"/>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/darker_gray"
         android:gravity="start"
         android:maxLines="2"
@@ -35,20 +38,20 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardView"
         android:layout_width="220dp"
-        android:layout_height="130dp"
+        android:layout_height="225dp"
         app:cardBackgroundColor="@android:color/darker_gray"
         app:cardCornerRadius="20dp"
         app:layout_constraintStart_toEndOf="@id/materialCardView"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@color/colorGray"
         app:strokeWidth="2dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="15dp"
         android:layout_marginEnd="5dp"/>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/darker_gray"
         android:gravity="start"
         android:maxLines="2"
@@ -63,20 +66,20 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView3"
         android:layout_width="220dp"
-        android:layout_height="130dp"
+        android:layout_height="225dp"
         app:cardBackgroundColor="@android:color/darker_gray"
         app:cardCornerRadius="20dp"
         app:layout_constraintStart_toEndOf="@id/cardView"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@color/colorGray"
         app:strokeWidth="2dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="15dp"
         android:layout_marginEnd="5dp"/>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/darker_gray"
         android:gravity="start"
         android:maxLines="2"
