--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -22,6 +22,10 @@
         android:id="@+id/action_delete_account"
         android:title="Delete Account"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_login"
+        android:title="Log in"
+        app:showAsAction="ifRoom" />
 
 
 </menu>
