--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -9,38 +9,104 @@
         android:id="@+id/action_home"
         android:name="com.example.foodplanner.home.view.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_to_search"
+            app:destination="@id/action_search" />
+        <action
+            android:id="@+id/action_home_to_details"
+            app:destination="@id/action_details" />
+        <action
+            android:id="@+id/action_home_to_authActivity"
+            app:destination="@id/authActivity" />
+    </fragment>
+
     <fragment
         android:id="@+id/action_details"
         android:name="com.example.foodplanner.details.view.DetailsFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail">
+        <argument
+            android:name="recipeId"
+            app:argType="string"
+            android:defaultValue="52772" />
+        <action
+            android:id="@+id/action_details_to_authActivity"
+            app:destination="@id/authActivity" />
+    </fragment>
+
     <fragment
         android:id="@+id/action_favourite"
         android:name="com.example.foodplanner.favourite.view.FavouriteFragment"
         android:label="fragment_favourite"
-        tools:layout="@layout/fragment_favourite" />
+        tools:layout="@layout/fragment_favourite">
+        <action
+            android:id="@+id/action_favourite_to_details"
+            app:destination="@id/action_details" />
+    </fragment>
+
     <fragment
         android:id="@+id/action_meal_plan"
         android:name="com.example.foodplanner.meal_plan.view.MealPlanFragment"
         android:label="fragment_meal_plan"
-        tools:layout="@layout/fragment_meal_plan" />
+        tools:layout="@layout/fragment_meal_plan">
+        <action
+            android:id="@+id/action_meal_plan_to_details"
+            app:destination="@id/action_details" />
+        <action
+            android:id="@+id/action_meal_plan_to_home"
+            app:destination="@id/action_home"
+            app:popUpTo="@id/action_meal_plan"
+            app:popUpToInclusive="true" />
+    </fragment>
+
     <fragment
         android:id="@+id/action_search"
         android:name="com.example.foodplanner.search.view.SearchFragment"
-        android:label="SearchFragment" />
+        android:label="SearchFragment">
+        <action
+            android:id="@+id/action_search_to_mealsFragment"
+            app:destination="@id/mealsFragment" />
+        <action
+            android:id="@+id/action_search_to_details"
+            app:destination="@id/action_details" />
+        <action
+            android:id="@+id/action_search_to_authActivity"
+            app:destination="@id/authActivity" />
+    </fragment>
+
     <fragment
         android:id="@+id/mealsFragment"
         android:name="com.example.foodplanner.search.view.MealsFragment"
-        android:label="MealsFragment" />
+        android:label="MealsFragment">
+        <argument
+            android:name="query"
+            app:argType="string" />
+        <argument
+            android:name="type"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_mealsFragment_to_details"
+            app:destination="@id/action_details" />
+        <action
+            android:id="@+id/action_mealsFragment_to_authActivity"
+            app:destination="@id/authActivity" />
+    </fragment>
+
     <fragment
         android:id="@+id/action_about"
         android:name="com.example.foodplanner.AboutAppFragment"
         android:label="fragment_about_app"
         tools:layout="@layout/fragment_about_app" />
+
     <fragment
         android:id="@+id/action_about_developer"
         android:name="com.example.foodplanner.AboutDeveloperFragment"
         android:label="fragment_about_developer"
         tools:layout="@layout/fragment_about_developer" />
+
+    <activity
+        android:id="@+id/authActivity"
+        android:name="com.example.foodplanner.auth.AuthActivity"
+        android:label="AuthActivity" />
 </navigation>
