--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="gold">#e8b923</color>
     <color name="myGray">#e9e9e9</color>
     <color name="mycolor">#01404f</color>
+    <color name="gray">#757575</color>
 
 
 </resources>
