--- a/app/src/main/res/layout/fragment_meal_plan.xml
+++ b/app/src/main/res/layout/fragment_meal_plan.xml
@@ -10,7 +10,7 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="18dp"
             android:text="Meal Plan of Week"
             android:textColor="@android:color/black"
             android:textSize="28sp"
@@ -19,16 +19,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- RecyclerView for Days -->
-        <View
-            android:id="@+id/viewDivider"
-            android:layout_width="270dp"
-            android:layout_height="3dp"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMealPlan"
@@ -37,6 +27,6 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewDivider" />
+            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
