--- a/app/src/main/res/navigation/nav_auth.xml
+++ b/app/src/main/res/navigation/nav_auth.xml
@@ -43,9 +43,7 @@
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_signupFragment_to_mainActivity"
-            app:destination="@id/mainActivity"
-            app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true" />
+            app:destination="@id/mainActivity" />
     </fragment>
 
     <activity
